testing fix for white space issue for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sauce:wght@400;700&display=swap");
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
